deployment/templates/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: squishmeist/server:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/conf/config.yaml
              subPath: config.yaml
            - name: server-certs
              mountPath: /etc/mtls/server
              readOnly: true

      volumes:
        - name: config-volume
          configMap:
            name: server-config
            items:
              - key: config.yaml
                path: config.yaml
        - name: server-certs
          secret:
            secretName: server-tls
