deployment/templates/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
spec:
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
